--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ djangorestframework = "^3.13.1"
 django-cors-headers = "^3.13.0"
 drf-spectacular = "^0.22.1"
 psycopg2-binary = "^2.9.3"
+django-rest-framework-social-oauth2 = "^1.1.0"
 
 invoke = {version = "^1.7.1", optional = true}
 rich = {version = "^12.5.1", optional = true}
