--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,6 +49,7 @@ uvicorn = {version = "^0.18.2", optional = true}
 
 django-anymail = {version = "^8.6", optional = true}
 gunicorn = {version = "^20.1.0", optional = true}
+django-filter = "^22.1"
 
 [tool.poetry.extras]
 dev = [
