--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,15 +3,11 @@ default_stages: [commit]
 
 repos:
 
-  - repo: https://github.com/psf/black
-    rev: 22.3.0
-    hooks:
-      - id: black
-
   - repo: https://github.com/PyCQA/isort
     rev: 5.10.1
     hooks:
       - id: isort
+        args: ["--settings-file=setup.cfg"]
 
   - repo: https://github.com/PyCQA/flake8
     rev: 4.0.1
