--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -8,8 +8,8 @@ services:
     container_name: nginx
     restart: always
     build:
-      context: ./
-      dockerfile: ./nginx/Dockerfile
+      context: ./nginx
+      dockerfile: ./Dockerfile
     depends_on:
       - django
     ports:
@@ -18,13 +18,14 @@ services:
   django: &django
     build:
       context: ./server
-      dockerfile: /Dockerfile
+      dockerfile: ./Dockerfile
     depends_on:
       - postgres
       - redis
     environment:
       - DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
       - REDIS_URL=${REDIS_URL}
+      - DJANGO_DEBUG=${DJANGO_DEBUG}
     expose:
       - 8000
     command: gunicorn config.wsgi -c ./config/gunicorn.py
