--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -12,10 +12,28 @@ services:
       dockerfile: ./Dockerfile
     depends_on:
       - django
+      - daphne
     ports:
       - 80:80
 
-  django: &django
+  daphne:
+    build:
+      context: ./server
+      dockerfile: ./Dockerfile
+    depends_on:
+      - postgres
+      - redis
+    environment:
+      - DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
+      - REDIS_URL=${REDIS_URL}
+      - DJANGO_DEBUG=${DJANGO_DEBUG}
+      - DJANGO_EMAIL_HOST_USER=${DJANGO_EMAIL_HOST_USER}
+      - DJANGO_EMAIL_HOST_PASSWORD=${DJANGO_EMAIL_HOST_PASSWORD}
+    expose:
+      - 8080
+    command: daphne -b 0.0.0.0 -p 8080 config.asgi:application
+
+  django:
     build:
       context: ./server
       dockerfile: ./Dockerfile
@@ -54,13 +72,14 @@ services:
       - 6379
 
   celery:
-    <<: *django
     container_name: celery
     restart: always
+    build:
+      context: ./server
+      dockerfile: ./Dockerfile
     depends_on:
-      - redis
       - postgres
-    ports: []
+      - redis
     environment:
       - REDIS_URL=${REDIS_URL}
       - DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
