--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -26,10 +26,10 @@ django-filter = "22.1"
 gunicorn = "20.1.0"
 django-extensions = "3.2.1"
 dj-database-url = "1.0.0"
-channels = "3.0.5"
-channels-redis = "3.4.1"
 drf-yasg = "1.21.4"
 djangorestframework-simplejwt = "^4.8.0"
+channels = {extras = ["daphne"], version = "^4.0.0"}
+channels-redis = "^4.0.0"
 
 [tool.poetry.group.dev.dependencies]
 django-stubs = "1.13.0"
