--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -8,8 +8,8 @@ services:
     container_name: nginx
     restart: always
     build:
-      context: ./nginx
-      dockerfile: ./Dockerfile
+      context: .
+      dockerfile: ./nginx/Dockerfile
     depends_on:
       - django
       - daphne
@@ -18,8 +18,10 @@ services:
 
   daphne:
     build:
-      context: ./server
-      dockerfile: ./Dockerfile
+      context: .
+      dockerfile: ./server/Dockerfile
+      args:
+        MODE: "--without dev"
     depends_on:
       - postgres
       - redis
@@ -35,8 +37,10 @@ services:
 
   django:
     build:
-      context: ./server
-      dockerfile: ./Dockerfile
+      context: .
+      dockerfile: ./server/Dockerfile
+      args:
+        MODE: "--without dev"
     depends_on:
       - postgres
       - redis
@@ -75,13 +79,16 @@ services:
     container_name: celery
     restart: always
     build:
-      context: ./server
-      dockerfile: ./Dockerfile
+      context: .
+      dockerfile: ./server/Dockerfile
+      args:
+        MODE: "--without dev"
     depends_on:
       - postgres
       - redis
     environment:
       - REDIS_URL=${REDIS_URL}
+      - DJANGO_DEBUG=${DJANGO_DEBUG}
       - DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
     command: celery --app config.celery:app worker --beat --scheduler=django --loglevel=info
 
