--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,12 +4,12 @@ volumes:
   postgres_data:
 
 services:
-  django: &django
+  django:
     container_name: django
     restart: always
     build:
-      context: ./server
-      dockerfile: ./Dockerfile
+      context: .
+      dockerfile: ./server/Dockerfile
       args:
         MODE: "--with dev"
     depends_on:
@@ -48,9 +48,13 @@ services:
       - 6379
 
   celery:
-    <<: *django
     container_name: celery
     restart: always
+    build:
+      context: .
+      dockerfile: ./server/Dockerfile
+      args:
+        MODE: "--with dev"
     depends_on:
       - redis
       - postgres
@@ -58,4 +62,4 @@ services:
     environment:
       - REDIS_URL=${REDIS_URL}
       - DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
-    command: celery --app config.celery:app worker --beat --scheduler=django --loglevel=info
+    command: celery --app config.celery:app worker --beat --scheduler=django --loglevel=debug
