--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -11,12 +11,17 @@ http {
     upstream localhost {
         server django:8000;
     }
+    upstream websocket {
+        server daphne:8080;
+    }
+
     types {
         text/css css;
     }
 
     server {
-        listen 80;
+        listen 80 default_server;
+        listen [::]:80 default_server;
 
         location /favicon.ico {
             access_log     off;
@@ -31,14 +36,25 @@ http {
             alias /nginx/static;
         }
 
+        location /ws/ {
+            proxy_pass http://websocket;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "Upgrade";
+            proxy_redirect off;
+        }
+
         location / {
             proxy_pass http://localhost;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "Upgrade";
+            proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header Host $host;
             proxy_redirect off;
 
             if ($request_method = 'OPTIONS') {
-                add_header 'Access-Control-Allow-Origin' 'http://localhost/';
                 add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, DELETE';
                 add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
                 add_header 'Access-Control-Max-Age' 1728000;
@@ -47,16 +63,14 @@ http {
                 return 204;
             }
             if ($request_method = 'POST') {
-                add_header 'Access-Control-Allow-Origin' 'http://localhost/' always;
-                add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
-                add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range' always;
-                add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range' always;
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+                add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
+                add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range';
             }
             if ($request_method = 'GET') {
-                add_header 'Access-Control-Allow-Origin' 'http://localhost/' always;
-                add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
-                add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range' always;
-                add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range' always;
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+                add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
+                add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range';
             }
         }
     }
