--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -63,3 +63,18 @@ services:
       - REDIS_URL=${REDIS_URL}
       - DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
     command: celery --app config.celery:app worker --beat --scheduler=django --loglevel=debug
+
+  alexandria:
+    image: raisultan/alexandria:0.1
+    volumes:
+      - ./docs/ws.yml:/ws.yml
+    ports:
+      - 5050:8080
+    environment:
+      ALEXANDRIA_YAML: /ws.yml
+
+  swagger-editor:
+    image: swaggerapi/swagger-editor
+    container_name: "swagger-editor"
+    ports:
+      - "8080:8080"
