--- a/docs/ws.yml
+++ b/docs/ws.yml
@@ -1,10 +1,10 @@
 info:
-  title: my_project
+  title: EventMaker
   version: 0.1.0
 
 server:
-  url: ws://0.0.0.0:8000/ws/chat/<room_id>/?token=<user_access_token>
-  description: <room_id> - Room with current id.
+  url: ws://0.0.0.0:8000/ws/chat/<event_id>/?token=<user_access_token>
+  description: <event_id> - Event with current id.
 
 actions:
   connect:
@@ -14,9 +14,9 @@ actions:
       properties:
         is_system: true
         description: Connect will be triggered only on connection request and handled by backend.
-    response_to_user:
-      event: room_users_retrieve
-      users:
+    response_to_group:
+      event: event_users_retrieve
+      members:
         type: array
         items:
           type: object
@@ -29,6 +29,24 @@ actions:
               type: string
             last_name:
               type: string
+    response_to_user:
+      event: event_messages_retrieve
+      messages:
+        type: array
+        items:
+          type: object
+          properties:
+            id:
+              type: integer
+            message:
+              type: string
+            user:
+              type: integer
+            event:
+              type: integer
+            created_at:
+              type: string
+              format: date-time
 
   send_message:
     description: Send new message.
@@ -36,7 +54,7 @@ actions:
       type: object
       properties:
         is_system: false
-        description: Send message.
+        description: Send new message.
     data:
       type: object
       properties:
@@ -47,5 +65,67 @@ actions:
       message:
         type: object
         properties:
+          id:
+            type: integer
           message:
             type: string
+          user:
+            type: integer
+          event:
+            type: integer
+          created_at:
+            type: string
+            format: date-time
+
+  edit_message:
+    description: Edit message.
+    actor:
+      type: object
+      properties:
+        is_system: false
+        description: Edit message.
+    data:
+      type: object
+      properties:
+        id:
+          type: number
+        message:
+          type: string
+    response_to_group:
+      event: message_edit
+      message:
+        type: object
+        properties:
+          id:
+            type: integer
+          message:
+            type: string
+          user:
+            type: integer
+          event:
+            type: integer
+          created_at:
+            type: string
+            format: date-time
+  
+  remove_message:
+    description: Remove message.
+    actor:
+      type: object
+      properties:
+        is_system: false
+        description: Remove message
+    data:
+      type: object
+      properties:
+        id:
+          type: number
+        message:
+          type: string
+    response_to_group:
+      event: message_remove
+      message:
+        type: object
+        properties:
+          message_id:
+            type: integer
